--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,17 @@ input[type=submit]:hover{
     padding-left: 22px;
     margin-bottom: 20px;
 }
+
+#gallery-image-6{
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    text-align: center;
+    float: left;
+    padding-top: 20px;
+    padding-left: 30px;
+    padding-right: 200px;
+    margin-bottom: 20px;
+}
 /* #gallery-image-1:hover{
     padding: 1px;
     border: 1px solid #021a40;
